force-app/main/default/objects/Service_Request_Lines__c/Service_Request_Lines__c.object-meta.xml
<CustomObject>
    <label>Service Request Lines</label>
    <nameField>
        <displayFormat>SRL - {000000}</displayFormat>
        <label>Service Request Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>