force-app/main/default/objects/Service_Request_Lines__c/fields/New_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Maturity_Date__c</fullName>
    <label>New Maturity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>