force-app/main/default/objects/Service_Request_Lines__c/fields/Old_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Maturity_Date__c</fullName>
    <label>Old Maturity Date</label>
    <type>Date</type>
</CustomField>